# direct_icp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh  install_dependencies.sh  run.sh
.github/workflows/: docker-image.yml
src/: main_tum.cpp
src/core/: Camera.cpp  Camera.h  Frame.cpp  Frame.h  Pose.cpp  Pose.h  macros.h  random.cpp  random.h  types.h
src/direct_icp/: DirectIcp.cpp  DirectIcp.h
src/evaluation/: evaluation.cpp  evaluation.h  tum.cpp  tum.h
src/keypoint_selection/: keypoint_selection.h
